# mle-training

./: README.md  __init__.py  housing.ipynb  ingest_data.py  my_docker_session  nonstandardcode.py  read_me_file.txt  requirements.txt
assignment3.1/: installTest.py  (+2 more)
assignment_4.1/: README.md  pyproject.toml
assignment_4.1/tamlep_4_1_tetali_sudheer/: .gitignore  env.yml  score.py
assignment_4.1/tamlep_4_1_tetali_sudheer/mlruns/712792505792920282/: meta.yaml
assignment_4.1/tamlep_4_1_tetali_sudheer/mlruns/712792505792920282/283c6612201a49058c6a28723ecd1dcb/: meta.yaml
assignment_4.1/tamlep_4_1_tetali_sudheer/mlruns/712792505792920282/283c6612201a49058c6a28723ecd1dcb/tags/: mlflow.log-model.history
assignment_4.1/tamlep_4_1_tetali_sudheer/mlruns/712792505792920282/5f1b7e9c9ff34f9599476644785e9512/: meta.yaml
assignment_4.1/tamlep_4_1_tetali_sudheer/mlruns/712792505792920282/5f1b7e9c9ff34f9599476644785e9512/metrics/: dt_mae  dt_mse  dt_rmse  lr_mae  lr_mse  lr_rmse  rf_mae  rf_mse  rf_rmse
assignment_4.1/tamlep_4_1_tetali_sudheer/mlruns/712792505792920282/5f1b7e9c9ff34f9599476644785e9512/tags/: mlflow.parentRunId  mlflow.source.git.commit
assignment_4.1/tamlep_4_1_tetali_sudheer/mlruns/712792505792920282/89f440ff4c794cdbb63814a24bb23878/: meta.yaml
assignment_4.1/tamlep_4_1_tetali_sudheer/mlruns/712792505792920282/cdeb2b8e9d724e4dba2809091bed1e75/: meta.yaml
assignment_4.1/tamlep_4_1_tetali_sudheer/mlruns/712792505792920282/f178cb8caec344b484852ce5e8d44fe2/: meta.yaml
assignment_4.1/tamlep_4_1_tetali_sudheer/tests/: unittest_1.py:Zone.Identifier
(+198 files in other folders)
