[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="tamlep_4_1_tetali_sudheer"
version="0.0.2"
authors = [
  { name="sudheer tetali" }
]
description = "assignement 4-1"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
